# subscription-manager

./: Cargo.toml  README.md
application/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs
core/src/domain/: model.rs
core/src/domain/model/: subscription_id.rs  year_month.rs
